tests/snapshots/integration__integration_tests__merge__merge_pre_commit_command_failure.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpaozfq3/test-config.toml
---
success: false
exit_code: 1
----- stdout -----
🟡 [33mAuto-staging untracked files: feature.txt[0m
🔄 [36mRunning pre-commit:[0m
[40m [0m  [1m[34mexit[0m 1[0m


----- stderr -----
[0m❌ [31mpre-commit command failed[0m

Command failed with exit code: exit status: 1

💡 [2mUse --no-hooks to skip pre-commit commands[0m
